--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -72,9 +72,9 @@
 
   // explorer
   "explorer.width": 30,
-  "explorer.icon.enableNerdfont": true,
+  //"explorer.icon.enableNerdfont": true,
   "explorer.previewAction.onHover": false,
-  "explorer.icon.enableVimDevicons": false,
+  "explorer.icon.enableVimDevicons": true,
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
