--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -74,7 +74,7 @@
   "explorer.width": 30,
   //"explorer.icon.enableNerdfont": true,
   "explorer.previewAction.onHover": false,
-  "explorer.icon.enableVimDevicons": true,
+  //"explorer.icon.enableVimDevicons": true,
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
