--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,7 +40,7 @@ bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 set -g monitor-activity on
 set -g visual-activity off
 
-setw -g mouse on
+setw -g mouse off
 
 # -- navigation ----------------------------------------------------------------
 
