--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,7 @@ set $lockScreenWallpaper /usr/share/wallpapers/garuda-wallpapers/Garuda-Desert.p
 ### Applications: ###
 
 set $preferredTerminalEmulator /usr/bin/alacritty
-set $preferredBrowser /usr/bin/firedragon
+set $preferredBrowser /usr/bin/firefox
 set $preferredFileManager /usr/bin/thunar
 set $preferredMailClient /usr/bin/geary
 set $preferredTextEditor /usr/bin/geany
@@ -81,14 +81,14 @@ bindsym $super+m bar mode toggle
 
 # start dmenu (a program launcher)
 bindsym $super+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size=20'"
-bindsym $super+p exec ~/.config/i3/dmenu_run_history 
-bindsym $super+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Noto Sans 20'
+bindsym $super+d exec ~/.config/i3/dmenu_run_history 
+bindsym $super+p exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Noto Sans 20'
 
 # Garuda Linux install
 bindsym $super+i exec sudo -E calamares
 
 # Lock screen
-bindsym $super+l exec i3lock -i $lockScreenWallpaper
+bindsym $alt+l exec i3lock -i $lockScreenWallpaper
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
@@ -127,14 +127,24 @@ bindsym $super+Down focus down
 bindsym $super+Up focus up
 bindsym $super+Right focus right
 
+bindsym $super+h focus left
+bindsym $super+j focus down
+bindsym $super+k focus up
+bindsym $super+l focus right
+
 # move focused window
 bindsym $super+Shift+Left move left
 bindsym $super+Shift+Down move down
 bindsym $super+Shift+Up move up
 bindsym $super+Shift+Right move right
 
+bindsym $super+Shift+h move left
+bindsym $super+Shift+j move down
+bindsym $super+Shift+k move up
+bindsym $super+Shift+l move right
+
 # split in horizontal orientation
-bindsym $super+h split h
+# bindsym $super+h split h
 
 # split in vertical orientation
 bindsym $super+v split v
@@ -167,11 +177,15 @@ bindsym $super+minus scratchpad show
 #navigate workspaces next / previous
 bindsym $super+Ctrl+Right workspace next
 bindsym $super+Ctrl+Left workspace prev
+bindsym $super+Ctrl+l workspace next
+bindsym $super+Ctrl+h workspace prev
 
 
 # switch to workspace
 bindsym $alt+Control+Right workspace next
 bindsym $alt+Control+Left workspace prev
+bindsym $alt+Control+l workspace next
+bindsym $alt+Control+h workspace prev
 bindsym $super+1 workspace 1
 bindsym $super+2 workspace 2
 bindsym $super+3 workspace 3
@@ -216,6 +230,12 @@ mode "resize" {
         bindsym Down resize grow height 5 px or 5 ppt
         bindsym Up resize shrink height 5 px or 5 ppt
         bindsym Right resize grow width 5 px or 5 ppt
+        
+        bindsym h resize shrink width 5 px or 5 ppt
+        bindsym j resize grow height 5 px or 5 ppt
+        bindsym k resize shrink height 5 px or 5 ppt
+        bindsym l resize grow width 5 px or 5 ppt
+
         bindsym Return mode "default"
 }
 bindsym $super+r mode "resize"
