Set key on off mouse

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,6 +42,12 @@ set -g visual-activity off
 
 setw -g mouse off
 
+# Toggle mouse on
+bind-key m  set-option -g mouse on ; display-message 'Mouse: ON'
+
+# Toggle mouse off
+bind-key C-m  set-option -g mouse off ; display-message 'Mouse: OFF'
+
 # -- navigation ----------------------------------------------------------------
 
 # create session
